product_docs/docs/edb-postgres-ai/1.2/hybrid-manager/using_hybrid_manager/migration/migrations/migration_database_details_view.mdx
---
title: Detailed view
navTitle: Detailed view
description: Use the detailed view to assist in database migrations with Hybrid Manager.
---

When you select a database from the **Estate** page > **Migrations** tab, a detailed view opens. This detailed view includes functionality that you can leverage to perform migrations from external databases. 

## Schemas

The **Schemas** tab offers an overview of the schemas found in your connected database. Here, you'll find summary metrics for the database, along with a list of schemas where you have granted `SELECT` access on at least one table. Only schemas containing at least one table are displayed.

This information can help you scope your migration effort and effectively plan the migration of your schemas. Additionally, the **Schemas** tab allows you to [create new Migration Portal projects](../../migration/schema_migration/migration_portal/hm_schema_migration.mdx#creating-a-migration-portal-project) directly from the extracted schemas.

!!!important

    The Agent detects schema changes to tables and columns while running. However, changes to views or procedures won't be detected until you restart the Agent.

**Summary cards** 

-   Total schemas for the selected database.

-   Total tables for the selected database.

-   Complexity overview for all schemas, color-coded by complexity (very easy, easy, medium, hard, very hard).

-   Level of effort, color-coded by day ranges (0-5, 6-15, 16-25, 26-40, 40+ days), defined by 8-hours working days. 

**Schema table** 

-   **Name:** Name of the schema. 

-   **Latest Assessment:** Status of the latest assessment. Possible values are Not started, In progress, Complete and Error.

-   **Last Assessed:** Timestamp corresponding to the last time the schema was assessed. The assessment will be automatically regenerated or updated if the Agent discovers that a new schema is available or if an existing one has been updated.

-   **# of Tables:** Number of tables in the assessed schema. 

-   **# of Objects:** Number of objects in the assessed schema.

-   **Complexity:** Indicates how challenging it will be to convert a specific schema to EDB Postgres Advanced Server, based on a detailed, object-level analysis. Possible values are Very Easy, Easy, Medium, Hard, and Very Hard. A single schema's complexity may be higher than the overall database complexity, as schema-level analysis is more granular.

-   **Migration LoE:** Indicates how many days it will take to migrate a specific schema, in 8-hour working days, based on a detailed, object-level analysis.

-   **MP Project:** Use the integrated Migration Portal to convert an Oracle schema to EDB Postgres Advanced Server. Select the plus sign to open a window where you can provide details to start a new schema migration project with the Migration Portal [project-scoped workspace](../../migration/schema_migration/migration_portal/access_mp.mdx#project-scoped-workspace-vs-users-workspace). After you provide the details, the Hybrid Manager creates a Migration Portal project in the background. You can access this project at a later time through the [Migration](migration_database_details_view.mdx#migration) tab.

## Assessment

The **Assessment** tab provides a migration assessment of your connected database, offering insights to help you scope the effort and plan the migration of your database objects. This section contains a summary of the assessment, including key metrics and detailed breakdowns of the factors that contribute to the generated analysis.

To export the assessment results in `.json` formatting, select **Download Report**. 

**Assessment Details:** summarizes key analysis results and assessment metadata.

**Compatibility Summary:** summarizes database features and schema objects as well as other factors that contribute to the overall migration complexity and level of effort. The complexity is assigned depending on a scoring system that analyses several factors. Some of the factors include database size, large object usage, used partition types, Oracle database features, procedural database objects and whether they are EPAS compatible. Each of the analyzed object gets a 1-5 score (very easy to very hard). The max complexity value is displayed here.

**Oracle PL/SQL features used:** lists all PL/SQL objects that contain Oracle built-in features. To understand the migration impact of the Oracle PL/SQL feature, see the object count, the occurrence count, whether they are EPAS-compatible and the results of the migration complexity assessment. 

If all calls of a specific feature have equivalent EDB Postgres Advanced Server implementations, the feature is marked as **EPAS Compatible**. If no equivalent is detected, the feature is marked as incompatible.

**Oracle database features used:** lists all Oracle database features in use within the database. 

**Incompatible PL/SQL features in objects:** lists all Oracle and non-Oracle incompatible PL/SQL features while displaying the schema they are in, the object type (procedure, function, etc.), the object name, the incompatible feature name, how often the feature appear and the migration complexity.

## Migration

Helps you perform migration-related tasks. 

**Create a Destination:** allows you to create a new cluster that will serve as a destination for your migration. See [Creating a database cluster](../../cluster_management/create-clusters/) for more guidance. 

**Migrate Schema(s):** lets you create a project in the built-in Migration Portal ([project-scoped workspace](../../migration/schema_migration/migration_portal/access_mp.mdx#project-scoped-workspace-vs-users-workspace)) that you can use to convert the Oracle schema to be compatible with EDB Postgres Advanced Server. After you resolve any incompatibilities, the Migration Portal service also let's you connect to the destination cluster to import the converted schema. 

**Migrate Data:** leverages the Hybrid Manager's [Data Migration Service](/edb-postgres-ai/current/hybrid-manager/using_hybrid_manager/migration/) to perform data migrations with CDC technology. Before you perform migrations with this function, ensure you have prepared your database, exported your schema, installed and configured the EDB DMS Reader (and Writer). See [Migrate your Oracle database to the Hybrid Manager](/edb-postgres-ai/current/hybrid-manager/using_hybrid_manager/migration/migration_guides/oracle_to_hm_managed/) for a chronological overview of the steps you must take to migrate from an Oracle database.
